buffer: Fix gst_buffer_memcmp() where the buffer is smaller than size

Also add unit tests for gst_buffer_memcmp

https://bugzilla.gnome.org/show_bug.cgi?id=706162